--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
+[build]
+  publish = "static"
+  command = "python app.py"
+
 [[redirects]]
   from = "/*"
-  to = "/templates/index.html"
+  to = "/index.html"
   status = 200
