--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "static"
-  command = "python app.py"
+  command = "python3 -m pip install -r requirements.txt && python3 app.py"
 
 [[redirects]]
   from = "/*"
